<resources>
    <string name="app_name">SatuSiaga</string>

    <string name="settings">Settings</string>
    <string name="enable_dark_mode">Enable dark mode</string>

    <string name="search_here">Search Here</string>

    <string name="flood">Flood</string>
    <string name="earthquake">Earthquake</string>
    <string name="fire">Fire</string>
    <string name="haze">Haze</string>
    <string name="wind">Wind</string>
    <string name="volcano">Volcano</string>
    <string name="list_of_disasters">List of Disasters</string>
    <string name="no_data">No Data</string>
</resources>