<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".feature.main.MainActivity">

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:id="@+id/searchCoordinatorLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <!-- NestedScrollingChild goes here (NestedScrollView, RecyclerView, etc.). -->
            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <!-- Screen content goes here. -->
            </androidx.core.widget.NestedScrollView>

            <com.google.android.material.search.SearchBar
                android:id="@+id/search_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/search_here" />

            <com.google.android.material.search.SearchView
                android:id="@+id/search_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/search_here"
                app:layout_anchor="@id/search_bar">
                <!-- Search suggestions/results go here (ScrollView, RecyclerView, etc.). -->
            </com.google.android.material.search.SearchView>

            <HorizontalScrollView
                android:id="@+id/chipHorizontalScrollView"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scrollbars="none"
                android:layout_marginTop="72dp">

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/chipGroup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:singleLine="true"
                    app:singleSelection="true"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp">

                    <com.google.android.material.chip.Chip
                        android:id="@+id/floodChip"
                        style="@style/Widget.Material3.Chip.Filter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/flood" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/earthquakeChip"
                        style="@style/Widget.Material3.Chip.Filter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/earthquake" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/fireChip"
                        style="@style/Widget.Material3.Chip.Filter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/fire" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/hazeChip"
                        style="@style/Widget.Material3.Chip.Filter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/haze" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/windChip"
                        style="@style/Widget.Material3.Chip.Filter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/wind" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/volcanoChip"
                        style="@style/Widget.Material3.Chip.Filter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/volcano" />

                </com.google.android.material.chip.ChipGroup>
            </HorizontalScrollView>



        </androidx.coordinatorlayout.widget.CoordinatorLayout>
        
        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <FrameLayout
                android:id="@+id/standard_bottom_sheet"
                style="@style/Widget.Material3.BottomSheet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:behavior_hideable="false"
                app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

                <com.google.android.material.bottomsheet.BottomSheetDragHandleView
                    android:id="@+id/drag_handle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />

            </FrameLayout>
        </androidx.coordinatorlayout.widget.CoordinatorLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>